2009-12-19  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Speed-up SVG Masking
        https://bugs.webkit.org/show_bug.cgi?id=32738

        This patch makes SVG Masking faster. At the moment we create a new ImageBuffer
        and copy the complete pixel array. That is rather inefficient. This patch
        uses the mask image directly.
        It also bounds the direct pixel manipultation to the viewable area to minimize
        the calculation of the mask.

        No change in functionality. So no new test.

        * svg/SVGMaskElement.cpp:
        (WebCore::SVGMaskElement::drawMaskerContent):
        * svg/SVGMaskElement.h:
        * svg/graphics/SVGResourceMasker.cpp:
        (WebCore::SVGResourceMasker::applyMask):
        * svg/graphics/SVGResourceMasker.h:

2009-12-19  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Add tests to check filter, mask, clip, opacity and marker ordering
        https://bugs.webkit.org/show_bug.cgi?id=14010

        The right ordering for applying effects on objects in SVG is filters,
        clipper/masker and opacity. This patch fixes the order of filter and
        clipper/masker. Opacity and marker need another test.
        This change is according to the SVG Specification:
        http://www.w3.org/TR/SVG11/render.html#Elements

        Test: svg/filters/filter-clip.svg

        * rendering/SVGRenderSupport.cpp:
        (WebCore::SVGRenderBase::prepareToRenderSVGContent):

2009-12-19  Evan Martin  <evan@chromium.org>

        Reviewed by Gustavo Noronha Silva.

        Revert my attempt at making --disable-geolocation work; it is
        more complicated than I anticipated.  (It passed on the build bots
        because they build with --enable-geolocation.)

        * GNUmakefile.am:

2009-12-19  MORITA Hajime  <morrita@gmail.com>

        Reviewed by Darin Adler.

        WebCore::Range::surroundContents NULL pointer crash.
